# qsl_rs

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
certs/: _.delivery.mp.microsoft.com.crt
src/: cors.rs  handler.rs  main.rs  models.rs  package_helper.rs
