[package]
name = "qsl_rs"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-only"
description = "Query Store Links API — Rust rewrite"

[dependencies]
axum = { version = "0.8", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
storelib_rs = { git = "https://github.com/query-store-links/storelib_rs.git" }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
clap = { version = "4", features = ["derive", "env"] }
